--- a/style.css
+++ b/style.css
@@ -115,8 +115,8 @@ justify-self: end;
   header{
     grid-column: 1 / 4;
     grid-row: 1 / 2;
-    width:45%;
     justify-self: center;
+    width:60%;
   }
 
   h1{
@@ -143,4 +143,10 @@ justify-self: end;
     grid-row: 2 / 4;
   }
 
+}
+
+@media only screen and (min-width: 1440px){
+  header{
+    width:45%;
+  }
 }
